; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/extr_hal_ftm.c_HAL_FTM_Base_DeInit.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/extr_hal_ftm.c_HAL_FTM_Base_DeInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@HAL_FTM_STATE_BUSY = common dso_local global i32 0, align 4
@HAL_FTM_STATE_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HAL_FTM_Base_DeInit(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @IS_FTM_INSTANCE(i32 %5)
  %7 = call i32 @assert_param(i32 %6)
  %8 = load i32, i32* @HAL_FTM_STATE_BUSY, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %12 = call i32 @__HAL_FTM_DISABLE_TOF_IT(%struct.TYPE_4__* %11)
  %13 = load i32, i32* @HAL_FTM_STATE_RESET, align 4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  ret void
}

declare dso_local i32 @assert_param(i32) #1

declare dso_local i32 @IS_FTM_INSTANCE(i32) #1

declare dso_local i32 @__HAL_FTM_DISABLE_TOF_IT(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
